--- a/pgmskillscore.html
+++ b/pgmskillscore.html
@@ -18,7 +18,9 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>（４）プログラミングスキルチェックより</h1>
-   
+   <h3>④プログラミングスキルチェック</h3>
+    <img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="25%"><img src="https://tkby.github.io/micra.github.io/pgmskillcheck2.jpg" alt="プログラミングスキルチェック2" width="25%">
+  
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
       <tr align="center">
               <th width="7%"><b>設問</b></th>
