--- a/V1kosatsu2.html
+++ b/V1kosatsu2.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>（２）「随時振り返り」型と「総括振り返り」型の違い</h1>
+    <p>どちらの型が優れているかではなく，授業内容に応じ，振り返りを確保しやすい方を選択するのが良いと考える</p>
+    <ul>【「随時振り返り」型の特徴】
+      <li>多くの児童に発言機会が生まれる。
+      <li>自分たちで命令を発見する喜びを体験できる面白さと，改善による達成感・完成させた喜びを得やすい。
+      <li>つまずいた時は，児童同士のん学び合いで命令を発見させる展開が効果的だが，命令毎の振り返りを簡潔にしないと，プログラム完成までの時間がかかる。
+    </ul>
+    <ul>【「総括振り返り」型の特徴】
+      <li>第１学年の完成率が高い。プログラミング未体験でも完成率を高められる展開である。
+      <li>お手本があるため，完成までの時間が比較的短く，振り返りに余裕ができ，完成後に試行錯誤をさせやすい。
+      <li>作成する命令数が増える場合に適している。
+    </ul>
+  </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
