--- a/kagami.html
+++ b/kagami.html
@@ -99,7 +99,7 @@ img{
            <h3>Ⅳ-2 結果</h3>
                       <ul>
                          <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→</a>
-                         <li>(2)商店街と制作物のプロフィールによる振り返りより
+                         <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/.html">→</a>
                          <li>(3)児童の記述より
                       </ul>
            <h3>Ⅴ-2 考察</h3>
