--- a/kagami.html
+++ b/kagami.html
@@ -82,7 +82,7 @@ img{
    <li>
              <h3>Ⅴ-1　考察</h3>
                      <ul>
-                        <li>(1)「評価・改善する『情報活用能力』」のたかまり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→</a>
+                        <li>(1)「評価・改善する『情報活用能力』」の高まり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→</a>
                         <li>(2)「随時振り返り」と「総括振り返り」の違い
            　　　　　 </ul>
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
