--- a/V1kosatsu1.html
+++ b/V1kosatsu1.html
@@ -132,7 +132,9 @@
    <td>p=0.069</td>
    <td><b>*d=0.46</b></td>
    </table>
-  
+           <h2></h2>
+            <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第１，２学年例題完成率" width="90%"></div>
+    
     
     </li>
  </ul>
