--- a/V1kosatsu1.html
+++ b/V1kosatsu1.html
@@ -133,7 +133,7 @@
    <td><b>*d=0.46</b></td>
    </table>
            <h2>第１，２学年例題プログラム完成率</h2>
-            <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第１，２学年例題完成率" width="50%"></div> <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第３，４学年例題完成率" width="50%"></div>
+            <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第１，２学年例題完成率" width="50%"></div> <div><img src="https://tkby.github.io/micra.github.io/reidaiwariai.jpg" alt="第３，４学年例題完成率" width="50%"></div>
 
     <p>低学年でも並行して行った〃検証授業の結果について紹介します。例題プログラムの完成率は上図のように
     
