--- a/V1kosatsu1.html
+++ b/V1kosatsu1.html
@@ -133,10 +133,10 @@
    <td><b>*d=0.46</b></td>
    </table>
            <h2>第１，２学年例題プログラム完成率</h2>
-            <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第１，２学年例題完成率" width="70%"></div>
-           <div><img src="https://tkby.github.io/micra.github.io/reidaiwariai.jpg" alt="第３，４学年例題完成率" width="70%"></div>
+            <div><img src="https://tkby.github.io/micra.github.io/reidaiwariai.jpg" alt="第３，４学年例題完成率" width="70%"></div>
+           <div><img src="https://tkby.github.io/micra.github.io/dai12reidai.jpg" alt="第１，２学年例題完成率" width="70%"></div>
 
-    <p>低学年でも並行して行った〃検証授業の結果について紹介します。第１，２学年の例題プログラムの完成率は上のグラフ（上：第３，４学年　下：第１，２学年　）から分かるように，第３，４学年の完成率と差がない。
+    <p>低学年でも並行して行った〃検証授業の結果について紹介します。第１，２学年の例題プログラムの完成率は上のグラフ（上：第３，４学年　下：第１，２学年　）から分かるように，第３，４学年の完成率と差がない。</p>
   <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="25%"><img src="https://tkby.github.io/micra.github.io/pgmskillcheck2.jpg" alt="プログラミングスキルチェック2" width="25%"></div>
   
            <table border="1"cellspacing="0" bordercolor="#333" width="100%">
