--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -17,7 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>SD法によるプロフィールを活用した振り返り</h1>
+   <h1>②SD法によるプロフィールを活用した振り返り</h1>
     <div><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="プロフィールアンケート" width="90%"></div>
  
     <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
