--- a/kagami.html
+++ b/kagami.html
@@ -83,7 +83,7 @@ img{
              <h3>Ⅴ-1　考察</h3>
                      <ul>
                         <li>(1)「評価・改善する『情報活用能力』」の高まり<a href ="https://tkby.github.io/micra.github.io/V1kosatsu1.html">→</a>
-                        <li>(2)「随時振り返り」と「総括振り返り」の違い
+                        <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/V1kosatsu2.html">→</a>
            　　　　　 </ul>
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
            <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
