--- a/V2kosatsu1.html
+++ b/V2kosatsu1.html
@@ -17,7 +17,8 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-        <h2>①第２回情報活用能力チェックリスト(設問15～35：第５，６学年）</h2>
+   <h1>（１）「評価・改善する『情報活用能力』」の高まり</h2>
+        <h2>第２回情報活用能力チェックリスト(設問15～35：第５，６学年）</h2>
         <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="15%"><b>学年</b></th>
@@ -46,7 +47,7 @@
            <td>＋0.24</td>
          </tr>
      </table>
-   <h2>(1)情報活用能力チェックリストの結果より（設問15,22,33,35:第5,6学年）</h2>
+   <h2>情報活用能力チェックリストの結果より（設問15,22,33,35:第5,6学年）</h2>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="5%"><b>設問</b></th>
