--- a/V1kosatsu2.html
+++ b/V1kosatsu2.html
@@ -19,14 +19,14 @@
   <li>
    <h1>（２）「随時振り返り」型と「総括振り返り」型の違い</h1>
     <p>どちらの型が優れているかではなく，授業内容に応じ，振り返りを確保しやすい方を選択するのが良いと考える</p>
-    <ul>【「随時振り返り」型の特徴】
+   <ul><b>【「随時振り返り」型の特徴】</b>
      <div><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="50%"></div>
          
       <li>多くの児童に発言機会が生まれる。
       <li>自分たちで命令を発見する喜びを体験できる面白さと，改善による達成感・完成させた喜びを得やすい。
       <li>つまずいた時は，児童同士のん学び合いで命令を発見させる展開が効果的だが，命令毎の振り返りを簡潔にしないと，プログラム完成までの時間がかかる。
     </ul>
-    <ul>【「総括振り返り」型の特徴】
+   <ul><b>【「総括振り返り」型の特徴】</b>
        <div><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="随時振り返り型" width="60%"></div>
     
       <li>第１学年の完成率が高い。プログラミング未体験でも完成率を高められる展開である。
