--- a/IV1_5.html
+++ b/IV1_5.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+     <li>
+        <h1>（５）授業観察・成果物より</h1>
+       <ul><li><b>【「随時振り返り」型】</b>
+                 <ul><li>命令を評価し，意図する動きをコンピュータにさせるために，実機で検証し，改善することができた。
+      　　　　　     <li>上手く動かないときは改善のための意見を出し合い，児童の考えだけでプログラム完成にたどり着いた。
+                 　  <li>応用テストで，習っていたにオリジナルの命令を考えだす児童が「総括振り返り」型に比べて多かった。
+                 </ul>       
+         <li><b>【「総括振り返り」型】</b>
+                 <ul><li>「随時振り返り」型より完成までの時間が短かった。
+                  　 <li>配布された例題のプログラムを見ながら，意図する動きをコンピュータに入力することができた。
+                      <li>振り返りで全ての命令の意味を確認後，完成したプログラムを改造して友達と見せ合う姿が多く見られた。
+                 </ul>
+        </ul>
+    </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
