--- a/IV1_5.html
+++ b/IV1_5.html
@@ -17,7 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
      <li>
-        <h1>（５）授業観察・成果物より</h1>
+        <h1>（５）授業観察・制作物より</h1>
        <ul><li><b>【「随時振り返り」型】</b>
                  <ul><li>命令を評価し，意図する動きをコンピュータにさせるために，実機で検証し，改善することができた。
       　　　　　     <li>上手く動かないときは改善のための意見を出し合い，児童の考えだけでプログラム完成にたどり着いた。
