--- a/IV2_4.html
+++ b/IV2_4.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>（４）児童の記述より</h1>
+    <p>第５，６学年の総記述を１学期（５～７月）と２学期（10～11月）で分けた。そこから「評価・改善する『情報活用能力』」の分析の指標に該当する記述のみ抽出し，「収集力」，「計画力」，「整理力・比較力・分析力」，「表現力・伝達力」，「共有力」に分類した。</p>
+   <ul><b>【「評価・改善する『情報活用能力』の記述】</b>
+     <div><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="50%"></div>
+         
+      <li>多くの児童に発言機会が生まれる。
+      <li>自分たちで命令を発見する喜びを体験できる面白さと，改善による達成感・完成させた喜びを得やすい。
+      <li>つまずいた時は，児童同士のん学び合いで命令を発見させる展開が効果的だが，命令毎の振り返りを簡潔にしないと，プログラム完成までの時間がかかる。
+    </ul>
+   <ul><b>【「総括振り返り」型の特徴】</b>
+       <div><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="随時振り返り型" width="60%"></div>
+    
+      <li>第１学年の完成率が高い。プログラミング未体験でも完成率を高められる展開である。
+      <li>お手本があるため，完成までの時間が比較的短く，振り返りに余裕ができ，完成後に試行錯誤をさせやすい。
+      <li>作成する命令数が増える場合に適している。
+    </ul>
+  </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
