--- a/IV2_4.html
+++ b/IV2_4.html
@@ -18,21 +18,18 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>（４）児童の記述より</h1>
-    <p>第５，６学年の総記述を１学期（５～７月）と２学期（10～11月）で分けた。そこから「評価・改善する『情報活用能力』」の分析の指標に該当する記述のみ抽出し，「収集力」，「計画力」，「整理力・比較力・分析力」，「表現力・伝達力」，「共有力」に分類した。</p>
-   <ul><b>【「評価・改善する『情報活用能力』の記述】</b>
-     <div><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="50%"></div>
+    <p>第５，６学年の総記述を１学期（５～７月）と２学期（10～11月）で分けた。そこから「評価・改善する『情報活用能力』」の分析の指標に該当する記述のみ抽出し，「収集力」，「計画力」，「整理力・比較力・分析力」，「表現力・伝達力」，「共有力」に分類した。以下は「評価・改善する『情報活用能力』」に関する記述の変容である。</p>
+        <ul><b>【「評価・改善する『情報活用能力』の記述】</b>
+            <div><img src="https://tkby.github.io/micra.github.io/micrajidokijutsu.jpg" alt="マイクラ記述" width="70%"></div>
          
-      <li>多くの児童に発言機会が生まれる。
-      <li>自分たちで命令を発見する喜びを体験できる面白さと，改善による達成感・完成させた喜びを得やすい。
-      <li>つまずいた時は，児童同士のん学び合いで命令を発見させる展開が効果的だが，命令毎の振り返りを簡潔にしないと，プログラム完成までの時間がかかる。
-    </ul>
-   <ul><b>【「総括振り返り」型の特徴】</b>
-       <div><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="随時振り返り型" width="60%"></div>
-    
-      <li>第１学年の完成率が高い。プログラミング未体験でも完成率を高められる展開である。
-      <li>お手本があるため，完成までの時間が比較的短く，振り返りに余裕ができ，完成後に試行錯誤をさせやすい。
-      <li>作成する命令数が増える場合に適している。
-    </ul>
+             <li>「収集力」の記述量は，１学期と２学期で同程度。
+             <li>「計画力」の記述量は，１学期の約0.6倍に減少。
+             <li>「整理力・比較力・分析力」の記述量は１学期の約2.6倍。
+             <li>「表現力・伝達力」の記述量は，１学期の約1.6倍。
+             <li>「共有力」の記述量は，２学期に大幅に増加。
+             <li>「整理力・比較力・分析力」が記述量・割合ともに増加。
+        </ul>
+  
   </li>
  </ul>
 
