--- a/kagami.html
+++ b/kagami.html
@@ -100,7 +100,7 @@ img{
                       <ul>
                          <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→</a>
                          <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/.html">→</a>
-                         <li>(3)児童の記述より
+                         <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/IV2_4.html">→</a>
                       </ul>
            <h3>Ⅴ-2 考察</h3>
                       <ul>
