--- a/IV2_2.html
+++ b/IV2_2.html
@@ -18,10 +18,13 @@
  <ul class="box-list" style="list-style:none;">
   <li>
     <h1>（２）商店街と制作物のプロフィールによる振り返りより</h1>
+      <div><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="プロフィールアンケート" width="90%"></div>
     <p>実態調査１で地域の商店街の日常の風景，地域の商店街のお祭り時の風景，マインクラフトで作成した商店街の風景の３つのイメージについて，評価対象同士の違いや類似性・特徴を発見できるSD法でイメージ調査をした。</p>
-    <div><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="プロフィールアンケート" width="90%"></div>
+ 
    <p>この調査により，以下の３つのプロフィールを得た。</p>
     <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
+
    <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="90%"></div>
    <p>10月半ばの時点までの商店街の町並みについて，SD法によるアンケート（第５学年19名，第６学年21名，教員13名）でプロフィールを作成し，それぞれの結果を比較しました。教員によるプロフィールは「児童よりも商店街に詳しい『大人のプロフィール』」として扱いました。</p>
    <p>すると，商店街の日常のプロフィールよりもマインクラフトで作った商店街のプロフィールの方が，児童と大人の捉え方が違うことが分かりました。</p>
