--- a/IV2_2.html
+++ b/IV2_2.html
@@ -23,7 +23,7 @@
  
    <p>この調査により，以下の３つのプロフィールを得た。</p>
     <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
-   <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵の商店街" width="90%"></div>
 
    <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="90%"></div>
    <p>10月半ばの時点までの商店街の町並みについて，SD法によるアンケート（第５学年19名，第６学年21名，教員13名）でプロフィールを作成し，それぞれの結果を比較しました。教員によるプロフィールは「児童よりも商店街に詳しい『大人のプロフィール』」として扱いました。</p>
