--- a/IV2_2.html
+++ b/IV2_2.html
@@ -48,9 +48,10 @@
           <td>類似点は商店街の特徴ではないか？</td>
           </table>
            <ul><li>類似点
-           <ul><li>第１回検証授業では，商店街の日常の風景について，児童と大人のプロフィールを比較させた。類似点を見つけさせ，類似点が何を示しているのかを考えさせると，児童は「商店街の特徴ではないか？」と考えた。
+               <ul><li>第１回検証授業では，商店街の日常の風景について，児童と大人のプロフィールを比較させた。類似点を見つけさせ，類似点が何を示しているのかを考えさせると，児童は「商店街の特徴ではないか？」と考えた。
+               </ul>
            </ul>
-            <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="40%"></div>
+          <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="40%"></div>
          <table border="1"cellspacing="0" bordercolor="#333" width="100%">
          <tr align="center">
              <th width="20%"><b>種類</b></th>
@@ -59,13 +60,13 @@
          </tr>  
           <tr><td rowspan="3">日常の商店街</td>
                    <td>開放的な⇔へいさ的な</td>
-                   <td>a</td>
+                   <td>子供は商店街に来たらわくわくするから開放的になるけど，大人は用事を済ませにきたから，そこまで開放的にならないと思う。</td>
           </tr>
           <tr><td>遊びたい⇔ながめたい</td>
-              <td>b</td>
+              <td>子供は商店街に嫌た楽しいけど，大人はゆっくりしたいからだと思う。</td>
           </tr>
           <tr><td>にぎやかな⇔静かな</td>
-               <td>c</td>
+               <td>大人と子供でやりたいことが違うからだと思う。大人は商店街が昔，賑やかだったころを知っていいて今はそんなに賑やかと思わないのだと思う。</td>
           </tr> 
         </table>
           
