--- a/IV2_2.html
+++ b/IV2_2.html
@@ -68,11 +68,12 @@
                <td>大人と子供でやりたいことが違うからだと思う。大人は商店街が昔，賑やかだったころを知っていいて今はそんなに賑やかと思わないのだと思う。</td>
           </tr> 
           </table>
-          <ul><li>相違点
-              <ul>次に相違点を探させると，児童は相違点に驚き，原因に興味を持った。
-                  <li>例えば，「にぎやかな⇔静かな」は，子供は「にぎやか」寄り，大人は「静かな」寄りである。児童の１人は「大人は商店街が昔，賑やかだった頃を知っていて，今はそんなに賑やかと思わないのだと思う」と発言し，昔の事情を聴いたことがある児童は非常に納得した。
-                   <li>児童は大人と子供，第５学年と第６学年，自分と他人で商店街の捉え方が違うと気づき，自分たちの制作物に対して評価をする視点を得た。
-          
+          <ul><li>相違点<br>次に相違点を探させると，児童は相違点に驚き，原因に興味を持った。
+                   <ul>
+                     <li>例えば，「にぎやかな⇔静かな」は，子供は「にぎやか」寄り，大人は「静かな」寄りである。児童の１人は「大人は商店街が昔，賑やかだった頃を知っていて，今はそんなに賑やかと思わないのだと思う」と発言し，昔の事情を聴いたことがある児童は非常に納得した。
+                     <li>児童は大人と子供，第５学年と第６学年，自分と他人で商店街の捉え方が違うと気づき，自分たちの制作物に対して評価をする視点を得た。
+                   </ul>
+          </ul>
   </li>
  </ul>
 
