--- a/IV2_2.html
+++ b/IV2_2.html
@@ -74,6 +74,7 @@
                      <li>児童は大人と子供，第５学年と第６学年，自分と他人で商店街の捉え方が違うと気づき，自分たちの制作物に対して評価をする視点を得た。
                    </ul>
           </ul>
+          <h2>第２回検証授業　プロフィール類似点</h2>
   </li>
  </ul>
 
