--- a/IV2_2.html
+++ b/IV2_2.html
@@ -61,7 +61,7 @@
                    <td>開放的な⇔へいさ的な</td>
                    <td>子供は商店街に来たらわくわくするから開放的になるけど，大人は用事を済ませにきたから，そこまで開放的にならないと思う。</td>
           </tr>
-          <tr><td>遊びたい⇔ながめたい</td>
+          <tr><td>あそびたい⇔ながめたい</td>
               <td>子供は商店街に嫌た楽しいけど，大人はゆっくりしたいからだと思う。</td>
           </tr>
           <tr><td>にぎやかな⇔静かな</td>
@@ -75,6 +75,19 @@
                    </ul>
           </ul>
           <h2>第２回検証授業　プロフィール類似点</h2>
+          <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵商店街" width="40%"></div>
+            <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+               <tr align="center">
+                   <th width="20%"><b>種類</b></th>
+                   <th width="30%"><b>大人と子供の捉え方の類似点</b></th>
+                   <th width="50%"><b>類似点を児童はどう捉えたか</b></th>
+               </tr>
+               <tr>
+                  <td>お祭り中の商店街</td>
+                  <td><ul><li>美しい<li>統一感のある<li>変化に富んだ<li>歴史のある<li>自然的な<li>明るい<li>個性的な<li>親しみやすい<li>いやされるような<li>解放的な<li>あたたかみがある<li>み力的な<li>あそびたい<li>にぎやかな<li>いなかっぽい</td>
+                  <td>地域の祭りに町の人が願うことではないか？</td>
+             </tr>
+          </table>
   </li>
  </ul>
 
