--- a/IV2_2.html
+++ b/IV2_2.html
@@ -88,6 +88,13 @@
                   <td>地域の祭りに町の人が願うことではないか？</td>
              </tr>
           </table>
+          <ul><li>類似点
+               <ul><li>第２回検証授業では，お祭り開催中の商店街の，児童と大人プロフィールを比較させた。
+                   <li>同じ商店街のイメージなのに，日常とお祭り時でプロフィールが大きく異なることと，大人と子供のプrフィールが類似していることに児童は気づいた。
+                   <li>大人と子供の類似点が何を示しているのか考えさせると，児童は「お祭りに町の人が願うことではないか？」と捉えた。
+               </ul>
+          </ul>
+   
   </li>
  </ul>
 
