--- a/IV2_2.html
+++ b/IV2_2.html
@@ -22,13 +22,13 @@
     <p>実態調査１で地域の商店街の日常の風景，地域の商店街のお祭り時の風景，マインクラフトで作成した商店街の風景の３つのイメージについて，評価対象同士の違いや類似性・特徴を発見できるSD法でイメージ調査をした。</p>
  
    <p>この調査により，以下の３つのプロフィールを得た。</p>
-    <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="75%"></div>
-   <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵の商店街" width="75%"></div>
-   <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="75%"></div>
+    <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="33%">
+   <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵の商店街" width="33%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="33%"></div>
    <p>これらの３つのプロフィールは，振り返りで「評価・改善する『情報活用能力』」を育成するための手立てである。３回の検証授業を通して，児童が自分たちの捉え方を客観的に把握するために，教員13名から得たプロフィールを，「子供より地元の商店街に詳しい大人のプロフィール」とし，比較対象とした。</p>
    <h2>第１回検証授業　プロフィール類似点・相違点</h2>
    
-         <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="40%"></div>
+         <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="70%"></div>
          <table border="1"cellspacing="0" bordercolor="#333" width="100%">
          <tr align="center">
              <th width="20%"><b>種類</b></th>
@@ -75,7 +75,7 @@
                    </ul>
           </ul>
           <h2>第２回検証授業　プロフィール類似点</h2>
-          <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵商店街" width="40%"></div>
+          <div><img src="https://tkby.github.io/micra.github.io/takeyoi.jpg" alt="竹宵商店街" width="70%"></div>
             <table border="1"cellspacing="0" bordercolor="#333" width="100%">
                <tr align="center">
                    <th width="20%"><b>種類</b></th>
