--- a/V2kosatsu1.html
+++ b/V2kosatsu1.html
@@ -19,7 +19,7 @@
   <li>
    <h1>（１）「評価・改善する『情報活用能力』」の高まり</h2>
         <h2>第２回情報活用能力チェックリスト(設問15～35：第５，６学年）</h2>
-        <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+        <table class="border1" border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="15%"><b>学年</b></th>
              <th width="15%"><b>人数（５月）</b></th>
