--- a/johokatsuyocheck.html
+++ b/johokatsuyocheck.html
@@ -15,7 +15,7 @@
   <!--6/19viewport仮設定-->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Minecraftで教科横断型の問題解決学習</title>
-   <link rel="stylesheet" href="subject.css" type="text/css">
+   <link rel="stylesheet" href="stylesheet.css" type="text/css">
  <!--レスポンシブデザイン-->
  
 <style type="text/css">
