--- a/multiset2.html
+++ b/multiset2.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
  <html>
  <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141278575-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-141278575-1');
-</script>
+  
 
    <meta charset="utf-8">
   <!--6/19viewport仮設定-->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Minecraftで教科横断型の問題解決学習</title>
-   <link rel="stylesheet" href="subject.css" type="text/css">
+   <link rel="stylesheet" href="stylesheet.css" type="text/css">
  <!--レスポンシブデザイン-->
  
 <style type="text/css">
