--- a/IV1_5.html
+++ b/IV1_5.html
@@ -19,12 +19,14 @@
      <li>
         <h1>（５）授業観察・制作物より</h1>
        <ul><li><b>【「随時振り返り」型】</b>
-                 <ul><li>命令を評価し，意図する動きをコンピュータにさせるために，実機で検証し，改善することができた。
+          <div><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="50%"></div>
+                  <ul><li>命令を評価し，意図する動きをコンピュータにさせるために，実機で検証し，改善することができた。
       　　　　　     <li>上手く動かないときは改善のための意見を出し合い，児童の考えだけでプログラム完成にたどり着いた。
                  　  <li>応用テストで，習っていたにオリジナルの命令を考えだす児童が「総括振り返り」型に比べて多かった。
                  </ul>       
          <li><b>【「総括振り返り」型】</b>
-                 <ul><li>「随時振り返り」型より完成までの時間が短かった。
+             <div><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="50%"></div>
+                  <ul><li>「随時振り返り」型より完成までの時間が短かった。
                   　 <li>配布された例題のプログラムを見ながら，意図する動きをコンピュータに入力することができた。
                       <li>振り返りで全ての命令の意味を確認後，完成したプログラムを改造して友達と見せ合う姿が多く見られた。
                  </ul>
