--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="stylesheet.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>活動の概要説明（プログラミングの学習活動）</h1>
+   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="10%"><b>回</b></th>
+             <th width="45%"><b>例題プログラム</b></th>
+             <th width="45%"><b>応用テストプログラム</b></th>
+                   </tr>
+  
+  <tr>
+   <td>第１回検証授業</td>
+   <td><video src="" controls muted poster="images/image1.png" width="200" height="100">
+<p>動画を再生できません。</p>
+</video></td>
+  </tr>
+     </table>
+    
+    </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
