--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -27,11 +27,12 @@
   
   <tr>
    <td>第１回検証授業</td>
-   <td><video src="" controls muted poster="images/image1.png" width="200" height="100">
-<p>動画を再生できません。</p>
-</video></td>
+   <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted poster="https://tkby.github.io/micra.github.io/baburu.jpg" width="200" height="100">
+       <p>動画を再生できません。</p>
+       </video></td>
+   <td></td>
   </tr>
-     </table>
+ </table>
     
     </li>
  </ul>
