--- a/kagami.html
+++ b/kagami.html
@@ -56,7 +56,7 @@ img{
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
              <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミングの学習活動について</h3>
-   <p>活動の概要説明</a></p>
+   <p>活動の概要説明<a href ="https://tkby.github.io/micra.github.io/reidaimovie.html">→</a></p>
                   <ul>
                       <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→</a>
                       <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
