--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -27,17 +27,18 @@
   
   <tr>
       <td>第１回検証授業</td>
-      <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted poster img src="https://tkby.github.io/micra.github.io/baburu.jpg" width="100%">
+      <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
       <td></td>
   </tr>
   <tr>
      <td>第２回検証授業</td>
-     <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted poster="https://tkby.github.io/micra.github.io/.jpg" width="100%">
+     <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
-   
+     <td></td>
+  </tr>
  </table>
     
     </li>
