--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -39,6 +39,20 @@
        </video></td>
      <td></td>
   </tr>
+    <tr>
+     <td>第３回検証授業</td>
+     <td><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
+     <td></td>
+  </tr>
+    <tr>
+     <td>第４回検証授業</td>
+     <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
+     <td></td>
+  </tr>
  </table>
     
     </li>
