--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -26,28 +26,28 @@
                    </tr>
   
   <tr>
-      <td>第１回検証授業<br>【「随時振り返り」型】<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"</td>
+      <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"</td>
       <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
       <td></td>
   </tr>
   <tr>
-     <td>第２回検証授業<br>【「総括振り返り」型】<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"</td>
+     <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"</td>
      <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
      <td></td>
   </tr>
     <tr>
-     <td>第３回検証授業<br>【「総括振り返り」型】<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"</td>
+     <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"</td>
      <td><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
      <td></td>
   </tr>
     <tr>
-     <td>第４回検証授業<br>【「随時振り返り」型】<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"</td>
+     <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"</td>
      <td><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
