--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -29,13 +29,13 @@
       <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"</td>
       <td><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
-       </video></td>
+       </video>><ul>プログラム完成率<li>第１学年:87.5%<li>第２学年:85.9%<li>第３学年:74.5%<li>第４学年:84.3%</td>
       <td></td>
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"</td>
      <td><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
-       <p>動画を再生できません。</p> </video><ul>プログラム完成率<li>第１学年:87.5%<li>第２学年:85.9%<li>第３学年:74.5%<li>第４学年:84.3%</td>
+       <p>動画を再生できません。</p></video</td>
      <td></td>
   </tr>
     <tr>
