--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -27,7 +27,7 @@
   
   <tr>
       <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
-      <td><p>（上から順に）３２１０とならぶすうじをプログラミングで０１２３にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
+      <td><p>３２１０とならぶすうじをプログラミングで０１２３にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
       <td></td>
