--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -34,20 +34,20 @@
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
-   <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><br><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
+   <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
      <td></td>
   </tr>
     <tr>
      <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
-     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><br><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
+     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
      <td></td>
   </tr>
     <tr>
      <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
-     <td><p>もぐらたたきゲームをつくれるようになろう！</p><br><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
+     <td><p>もぐらたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
      <td></td>
