--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -21,12 +21,14 @@
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="20%"><b>回</b></th>
-             <th width="40%"><b>例題プログラム</b></th>
-             <th width="40%"><b>応用テストプログラム</b></th>
+             <th width="10%"><b>命令</b></th>
+             <th width="35%"><b>例題プログラム</b></th>
+             <th width="35%"><b>応用テストプログラム</b></th>
                    </tr>
   
   <tr>
       <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
+      <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" width="100%"></td>
       <td><p>３２１０とならぶすうじをプログラミングで０１２３にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
@@ -34,12 +36,14 @@
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
-   <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
+     <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" width="100%"></td>
+     <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
      <td></td>
   </tr>
     <tr>
      <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
+     <td><img src="https://tkby.github.io/micra.github.io/kakijunmegane.jpg" width="100%"></td>
      <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
@@ -47,6 +51,7 @@
   </tr>
     <tr>
      <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
+     <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" width="100%"></td>
      <td><p>もぐらたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
