--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -28,8 +28,8 @@
              </tr>
   
   <tr>
-      <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
-      <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" width="100%"></td>
+      <td>第１回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"><ul><li>命令数:６つ<li>基本処理:順次処理</ul></td>
+   <td><img src="https://tkby.github.io/micra.github.io/baburumegane.jpg" width="100%"></td>
       <td><p>３２１０とならぶすうじをプログラミングで０１２３にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
@@ -37,7 +37,7 @@
       <td></td>
   </tr>
   <tr>
-     <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
+     <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul><li>命令数:６つ<li>基本処理:分岐を含む反復処理</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" width="100%"></td>
      <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
@@ -45,7 +45,7 @@
      <td></td>
   </tr>
     <tr>
-     <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"></td>
+     <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul>命令数:４つ<li>基本処理:順次処理</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/kakijunmegane.jpg" width="100%"></td>
      <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
@@ -54,7 +54,7 @@
      <td></td>
   </tr>
     <tr>
-     <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"></td>
+     <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"><ul><li>命令数:５つ<li>基本処理:分岐を含む反復処理</td>
      <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" width="100%"></td>
      <td><p>もぐらたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
