--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -33,7 +33,7 @@
       <td><p>３２１０とならぶすうじをプログラミングで０１２３にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
-      <td></td>
+      <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" width="100%"></td>
       <td></td>
   </tr>
   <tr>
@@ -41,7 +41,7 @@
      <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" width="100%"></td>
      <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
-     <td></td>
+     <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"></td>
      <td></td>
   </tr>
     <tr>
@@ -50,7 +50,7 @@
      <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
-     <td></td>
+     <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" width="100%"></td>
      <td></td>
   </tr>
     <tr>
@@ -59,7 +59,7 @@
      <td><p>もぐらたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
-     <td></td>
+     <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"></td>
      <td></td>
   </tr>
  </table>
