--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -34,7 +34,9 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
       <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" width="100%"></td>
-      <td></td>
+      <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul><li>命令数:６つ<li>基本処理:分岐を含む反復処理</ul></td>
@@ -42,7 +44,9 @@
      <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"></td>
-     <td></td>
+     <td><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
   </tr>
     <tr>
      <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul>命令数:４つ<li>基本処理:順次処理</ul></td>
@@ -51,7 +55,9 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" width="100%"></td>
-     <td></td>
+     <td><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
   </tr>
     <tr>
      <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"><ul><li>命令数:５つ<li>基本処理:分岐を含む反復処理</td>
@@ -60,7 +66,9 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"></td>
-     <td></td>
+     <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  width="100%">
+       <p>動画を再生できません。</p>
+       </video></td>
   </tr>
  </table>
     
