--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -40,10 +40,10 @@
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul><li>命令数:６つ<li>基本処理:分岐を含む反復処理</ul></td>
-     <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" width="100%"><br><p>パーツの準備</p><ul><li>口を開いた絵<li>口を閉じた絵<li>３<li>２<li>１<li>０</ul></td>
+     <td><img src="https://tkby.github.io/micra.github.io/pakusutomegane.jpg" width="100%"><br><p>パーツの準備</p><ul><li>顔（開）<li>顔（閉）<li>３<li>２<li>１<li>０</ul></td>
      <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
-     <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"><br><p>パーツの準備</p><ul><li>赤〇（点灯）<li>黒〇（消灯）<li>き<li>え<li>た<li>!</ul></td>
+     <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"><br><p>パーツの準備</p><ul><li>赤（点灯）<li>黒（消灯）<li>き<li>え<li>た<li>!</ul></td>
      <td><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
