--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -61,11 +61,11 @@
   </tr>
     <tr>
      <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"><ul><li>命令数:５つ<li>基本処理:分岐を含む反復処理</td>
-     <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" width="100%"><br><p>パーツの準備</p><ul><li>穴<li>モグラ小<li>モグラ大<li>※タッチマークをモグラ大に重ねる</ul></td>
+     <td><img src="https://tkby.github.io/micra.github.io/moguramegane.jpg" width="100%"><br><p>パーツの準備</p><ul><li>穴<li>モグラ小<li>モグラ大</ul><p>※タッチマークをモグラ大に重ねる</p></td>
      <td><p>もぐらたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/mogura.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
-     <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"><br><p>パーツの準備</p><ul><li>横穴<li>ワニ小<li>ワニ大<li>※タッチマークをワニ大に重ねる</ul></td>
+     <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"><br><p>パーツの準備</p><ul><li>横穴<li>ワニ小<li>ワニ大</ul><p>※タッチマークをワニ大に重ねる</p></td>
      <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video></td>
