--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -36,7 +36,7 @@
       <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" width="100%"><br><p>パーツの準備</p><ul><li>６<li>７<li>８<li>９</ul></td>
       <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
-       </video></td>
+       </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
   <tr>
      <td>第２回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul><li>命令数:６つ<li>基本処理:分岐を含む反復処理</ul></td>
@@ -46,7 +46,7 @@
      <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"><br><p>パーツの準備</p><ul><li>赤（点灯）<li>黒（消灯）<li>き<li>え<li>た<li>!</ul></td>
      <td><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
-       </video></td>
+       </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
     <tr>
      <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul>命令数:４つ<li>基本処理:順次処理</ul></td>
@@ -57,7 +57,7 @@
      <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" width="100%"><br><p>パーツの準備</p><ul><li>以の一画目<li>以の二画目<li>以の三画目<li>以の四画目<li>以の完成形</ul></td>
      <td><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
-       </video></td>
+       </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
     <tr>
      <td>第４回検証授業<br>「随時振り返り」型<br><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" width="100%"><ul><li>命令数:５つ<li>基本処理:分岐を含む反復処理</td>
@@ -68,7 +68,7 @@
      <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"><br><p>パーツの準備</p><ul><li>横穴<li>ワニ小<li>ワニ大</ul><p>※タッチマークをワニ大に重ねる</p></td>
      <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
-       </video></td>
+       </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
  </table>
     
