--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -34,7 +34,7 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:84.3%<li>第３学年:74.5%<li>第２学年:85.9%<li>第１学年:87.5%</ul></td>
       <td><img src="https://tkby.github.io/micra.github.io/baburuoyo.jpg" width="100%"><br><p>パーツの準備</p><ul><li>６<li>７<li>８<li>９</ul></td>
-      <td><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  width="100%">
+      <td><p>９８７６とならぶすうじをプログラミングで６７８９にならべかえることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/6789.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
@@ -44,7 +44,7 @@
      <td><p>３，２，１，０とかぞえ，０になったらパクパクをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/palkusuto.MP4" controls muted  width="100%">
       <p>動画を再生できません。</p></video><ul>プログラム完成率<li>第４学年:99.1%<li>第３学年:90.0%<li>第２学年:100%<li>第１学年:92.7%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/Lchikamodoki.jpg" width="100%"><br><p>パーツの準備</p><ul><li>赤（点灯）<li>黒（消灯）<li>き<li>え<li>た<li>!</ul></td>
-     <td><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  width="100%">
+     <td><p>き，え，た，！とあらわし，！になったらてんめつをとめることができるようになろう！</p><video src="https://tkby.github.io/micra.github.io/Lchika.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
@@ -55,7 +55,7 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" width="100%"><br><p>パーツの準備</p><ul><li>以の一画目<li>以の二画目<li>以の三画目<li>以の四画目<li>以の完成形</ul></td>
-     <td><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
+     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
@@ -66,7 +66,7 @@
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:96.7%<li>第３学年:97.5%<li>第２学年:98.5%<li>第１学年:93.8%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/waniwani.jpg" width="100%"><br><p>パーツの準備</p><ul><li>横穴<li>ワニ小<li>ワニ大</ul><p>※タッチマークをワニ大に重ねる</p></td>
-     <td><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  width="100%">
+     <td><p>ワニたたきゲームをつくれるようになろう！</p><video src="https://tkby.github.io/micra.github.io/waniwani.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:%<li>第３学年:%<li>第２学年:%<li>第１学年:%</ul></td>
   </tr>
