--- a/reidaimovie.html
+++ b/reidaimovie.html
@@ -51,11 +51,11 @@
     <tr>
      <td>第３回検証授業<br>「総括振り返り」型<br><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" width="100%"><ul>命令数:４つ<li>基本処理:順次処理</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/kakijunmegane.jpg" width="100%"><br><p>パーツの準備</p><ul><li>必の一画目<li>必の二画目<li>必の三画目<li>必の四画目<li>必の完成形</ul></td>
-     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
+     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，おぼえさせることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijun.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:92.65%<li>第２学年:100%<li>第１学年:96.88%</ul></td>
      <td><img src="https://tkby.github.io/micra.github.io/kakijunoyo.jpg" width="100%"><br><p>パーツの準備</p><ul><li>以の一画目<li>以の二画目<li>以の三画目<li>以の四画目<li>以の完成形</ul></td>
-     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，かんじをかんせいできるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
+     <td><p>五かくのかんじのかきじゅんをコンピュータにおしえ，おぼえさせることができるようになろう!</p><video src="https://tkby.github.io/micra.github.io/kakijunoyo.MP4" controls muted  width="100%">
        <p>動画を再生できません。</p>
        </video><ul>プログラム完成率<li>第４学年:100%<li>第３学年:100%<li>第２学年:100%<li>第１学年:98.4%</ul></td>
   </tr>
