--- a/inyosanko.html
+++ b/inyosanko.html
@@ -115,6 +115,13 @@
      <td>2021年3月</td>
    </tr> 
      
+    <tr>
+     <td></td>
+     <td></td>
+     <td>竹林芳法</td>
+     <td>「評価・改善する『情報活用能力』」の育成</td>
+     <td>2021年3月</td>
+   </tr> 
   </table>
     
     </li>
