--- a/youshi.html
+++ b/youshi.html
@@ -29,7 +29,12 @@
    <td>本研究では，プログラミング活動と地域の祭りをデジタルで表現する活動において，本校児童の課題をつかみ，振り返り活動を工夫した授業を行うことで，自らの情報活用を適切に評価・改善する児童を育成できるかを検討した。<br>前者の活動では，振り返りを１単位時間の中で場面を変えて２パターンの授業を設定した。後者の活動では，授業の段階に応じて振り返りを工夫した授業を設定した。活動の効果を分析した結果，どちらの活動でも自ら評価・改善をして，適切な情報活用ができる児童を育むことができ，それぞれの授業の特徴や効果も明らかになった。</td>
   </tr>
      </table>
-    
+    <video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="50%">
+       <p>動画を再生できません。</p>
+       </video>
+   <video src="https://tkby.github.io/micra.github.io/baburu.MP4" controls muted  width="50%">
+       <p>動画を再生できません。</p>
+       </video>
     </li>
  </ul>
 
