--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -19,7 +19,15 @@
   <li>
    <h1>2 研究の目的</h1>
    <p>「自らの情報活用を評価・改善する力」を育むために分析の指標を明確にし，ICT活用時の振り返りを工夫し，効果を検証することを通して，自ら評価・改善をして適切な情報活用ができる児童を育成することを目的とした。</p>
-   <div><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="33%"><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="33%"><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="33%"></div>
+  <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="20%"><b>プログラミングの学習活動での振り返り（「随時振り返り」型）</b></th>
+             <th width="40%"><b>プログラミングの学習活動での振り返り（総括振り返り型）</b></th>
+             <th width="40%"><b>調べたことをデジタルで表現し，改善を重ねていく活動での振り返り</b></th>
+           </tr>
+   　　　　<td><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="100%"></td>
+           <td><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="100%"></td>
+           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td>
     </li>
  </ul>
 
