--- a/prograjittaichosa.html
+++ b/prograjittaichosa.html
@@ -28,8 +28,8 @@
       
            <tr>
             <td>内容</td>
-            <td>プログラミングスキルチェックで検証授業の事前と事後の変容を明らかにする。</td>
-            <td>情報活用能力チェックリストを用いて５月に行った調査の２回目を行い，結果を比較し，児童の変容を明らかにする。</td>
+            <td>プログラミングスキルチェックで検証授業の事前と事後の変容を明らかにする。<br><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" width="25%"><br><img src="https://tkby.github.io/micra.github.io/pgmskillcheck2.jpg" width="25%"></td>
+            <td>情報活用能力チェックリストを用いて５月に行った調査の２回目を行い，結果を比較し，児童の変容を明らかにする。<br><img src="https://tkby.github.io/micra.github.io/" width="%"></td>
            </tr>
            
            <tr>
