--- a/prograjittaichosa.html
+++ b/prograjittaichosa.html
@@ -29,7 +29,102 @@
            <tr>
             <td>内容</td>
             <td>プログラミングスキルチェックで検証授業の事前と事後の変容を明らかにする。<br><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" width="25%"><br><img src="https://tkby.github.io/micra.github.io/pgmskillcheck2.jpg" width="25%"></td>
-            <td>情報活用能力チェックリストを用いて５月に行った調査の２回目を行い，結果を比較し，児童の変容を明らかにする。<br><img src="https://tkby.github.io/micra.github.io/" width="%"></td>
+            <td>情報活用能力チェックリストを用いて５月に行った調査の２回目を行い，結果を比較し，児童の変容を明らかにする。
+                <table border="1"cellspacing="0" bordercolor="#333" width="60%">
+                <tr align="center">
+                <th width="5%"><b>設問</b></th>
+                <th width="95%"><b>内容</b></th>
+                </tr>
+   
+                 <tr>
+                 <td></td>
+                 <td><b>問題解決・探究における情報活用</b></td>
+                 <tr>
+                 <td><b>15</b></td>
+                 <td>身近な人に聞いたり，身近な場所から調べたりすることは得意である。</td>
+                 </tr>
+                 
+   <tr>
+    <td><b>16</b></td>
+    <td>見学やインタビューなどの調査方法で調べることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>17</b></td>
+    <td>地図や図書などの資料から調べることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>18</b></td>
+    <td>実験や観察で調べることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>19</b></td>
+    <td>ものごとを比べて，似たようなことや違うことを考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>20</b></td>
+    <td>ものごとを，時間や大切さなどの順序で考えることは得意である。</td>
+   </tr>
+    <tr>
+    <td><b>21</b></td>
+    <td>考えとその理由をつなげて考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>22</b></td>
+    <td>ものごとの全体と中心をつなげて考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>23</b></td>
+    <td>ものごとの原因と結果をつなげて考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>24</b></td>
+    <td>ものごとを分類して考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>25</b></td>
+    <td>ものごとを分解したり，まとめたりして考えることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>26</b></td>
+    <td>調べたことを簡単な絵や図に整理することは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>27</b></td>
+    <td>調べたことを表やグラフに整理することは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>28</b></td>
+    <td>資料から，特徴，傾向，変化を読み取ることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>29</b></td>
+    <td>自分や他人が調べたり考えたりしたことを組み合わせて，まとめることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>30</b></td>
+    <td>文や写真，動画などを組み合わせて，まとめることは得意である。</td>
+   </tr>
+    <tr>
+    <td><b>31</b></td>
+    <td>声の大きさや間の取り方を工夫して発表することは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>32</b></td>
+    <td>調べたりまとめたりする計画を立てることは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>33</b></td>
+    <td>調べたりまとめたりしたことを振り返り，改善することは得意である。</td>
+   </tr>
+   <tr>
+    <td><b>34</b></td>
+    <td>インターネットや新聞が伝える情報には，発信者の意図が含まれていることをよく考えるようにしている。</td>
+   </tr>
+   <tr>
+    <td><b>35</b></td>
+    <td>調べたことや読み取ったことを参考にして，自分なりの考えを伝えるようにしている。</td>
+   </tr>
+  </table></td>
            </tr>
            
            <tr>
