--- a/senkokenkyu.html
+++ b/senkokenkyu.html
@@ -25,8 +25,8 @@
          <li>情報活用能力の体系的な整理（文科省）に照らすと，「問題解決・探究における情報を活用する力」の④「自らの情報活用を評価・改善する力」が弱いといえる。<br> <img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="35%">
     
        　<li>木村明憲は著書で，総合的な学習の時間での探究的な学びのプロセスを９ステップに分類し，育成できる情報活用能力を８つの力に分類している。本研究に関連する「評価・改善力」はステップ③～⑨にあたる。 <br><img src="https://tkby.github.io/micra.github.io/kimurastep.jpg" alt="木村氏単元縦断型学習" width="50%">
-         <li>そこで，ステップ③～⑨で育成される力に,「計画力」を加えて５つに整理し直し，まとめた力を「評価・改善する情報活用能力」とした。<br><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="50%">
-   <br><「単元縦断×教科横断　主体的な学びを引き出す９つのステップ（木村明憲著）」33pの図をもとに作成>
+         <li>そこで，ステップ③～⑨で育成される力に,「計画力」を加えて５つに整理し直し，まとめた力を「評価・改善する情報活用能力」とした。
+   <br><「単元縦断×教科横断　主体的な学びを引き出す９つのステップ（木村明憲著）」33pの図をもとに作成><br><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="50%">
           <li>「評価・改善する『情報活用能力』の分析の指標は，以下の表の通りである。<br><img src="https://tkby.github.io/micra.github.io/hyokaishihyo.jpg" alt="評価・改善の指標" width="50%">
  
      <li>(3)効果の検証・制作物の分析について<br><p>石井康夫，大久保あかね，鈴木大介はSD法を用い，静岡県富士市の商店街における来街者等のイメージ調査に関して比較研究を行った。マインクラフトによる制作物を評価・改善するための振り返りに取り入れた。</p>
