--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -22,8 +22,11 @@
    <div><img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="35%"></div>
    <p><b>⇩</b></p>
    
-   
-   
+   <p><b>⇩</b></p>
+   <div><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="49%">
+    <p><b>⇩</b></p>
+    <img src="https://tkby.github.io/micra.github.io/hyokaishihyo.jpg" alt="評価・改善の指標" width="49%">
+   <p><b>⇩</b></p>   
    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
              <th width="22%"><b>プログラミングの学習活動での振り返り（「随時振り返り」型）</b></th>
