--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -19,13 +19,13 @@
   <li>
    <h1>2 研究の目的</h1>
    <p>「自らの情報活用を評価・改善する力」を育むために分析の指標を明確にし，ICT活用時の振り返りを工夫し，効果を検証することを通して，自ら評価・改善をして適切な情報活用ができる児童を育成することを目的とした。</p>
-   <div><img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="25%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="25%"><br><p>「自らの情報活用を評価・改善する力」を育むために</p></div>
    <p><b>⇩</b></p>
    <div><img src="https://tkby.github.io/micra.github.io/kimurastep.jpg" alt="木村氏単元縦断型学習" width="35%"></div>
    <p><b>⇩</b></p>
    <div><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="35%">
     <p><b>⇩</b></p>
-    <img src="https://tkby.github.io/micra.github.io/hyokaishihyo.jpg" alt="評価・改善の指標" width="40%">
+   <div><img src="https://tkby.github.io/micra.github.io/hyokaishihyo.jpg" alt="評価・改善の指標" width="40%"><br><p>分析の指標を明確にし，</p></div>
    <p><b>⇩</b></p>   
    <table border="1"cellspacing="0" bordercolor="#333" width="98%">
            <tr align="center">
@@ -35,8 +35,9 @@
            </tr>
    　　　　<td><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="100%"></td>
            <td><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="100%"></td>
-           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td>
+           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td><br><p>ICT活用時の振り返りを工夫し，効果を検証することを通して，</p>
          </table>
+     <p><b>⇩</b></p>   
     </li>
  </ul>
 
