--- a/kenkyumokuteki.html
+++ b/kenkyumokuteki.html
@@ -33,8 +33,9 @@
            </tr>
    　　　　<td><img src="https://tkby.github.io/micra.github.io/zuijifurikaeri.jpg" alt="随時振り返り型" width="100%"></td>
            <td><img src="https://tkby.github.io/micra.github.io/sokatsufurikaeri.jpg" alt="総括振り返り型" width="100%"></td>
-           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td><br><p>ICT活用時の振り返りを工夫し，効果を検証することを通して，</p>
-         </table>
+           <td><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラの振り返り" width="100%"></td>
+           </table>
+     <p>ICT活用時の振り返りを工夫し，効果を検証することを通して，</p>
      <p><b>⇩</b></p>   
     </li>
  </ul>
